# vllm-wizard

./: .gitignore  README.md  pyproject.toml  requirements.txt
.qoder/repowiki/en/content/: Configuration Management.md  Developer Guide.md  Installation and Setup.md  Performance Estimation.md  Quick Start Guide.md
.qoder/repowiki/en/content/API Reference/: API Reference.md  CLI Integration API.md  Hardware Detection API.md  Schema Models.md
.qoder/repowiki/en/content/Advanced Usage and Integration/: Advanced Usage and Integration.md  Automation and Scripting.md  Custom Plugins and Extensions.md  Integration Patterns.md  Performance Tuning and Optimization.md
.qoder/repowiki/en/content/Artifact Generation System/: Artifact Generation System.md  Docker Artifact Generation.md  Kubernetes Artifact Generation.md  YAML Profile Serialization.md  vLLM Serve Command Generation.md
.qoder/repowiki/en/content/Command Reference/: Command Reference.md  Detect Command.md  Generate Command.md  Plan Command.md
.qoder/repowiki/en/content/Core Concepts/: Core Concepts.md  GPU Detection and Hardware Compatibility.md  Model Metadata Processing.md  Performance Estimation Methodology.md  VRAM Memory Breakdown.md
.qoder/repowiki/en/meta/: repowiki-metadata.json
examples/profiles/: sample.yaml
src/vllm_wizard/: __init__.py  cli.py
src/vllm_wizard/hardware/: __init__.py  detect.py
src/vllm_wizard/models/: __init__.py  metadata.py
src/vllm_wizard/planning/: __init__.py  memory.py  perf.py  planner.py  recommend.py
src/vllm_wizard/render/: __init__.py  commands.py  profile.py  report.py
src/vllm_wizard/schemas/: __init__.py  inputs.py  outputs.py  profile.py
tests/: conftest.py  test_cli.py  test_memory.py  test_models.py
(+24 files in other folders)
